--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
           >
           <ul class="header_li list">
             <li class="header_menu_item">
-              <a href="./index.html" class="header_menu_li link">Studio</a>
+              <a href="./index.html" class="header_menu_li link current">Studio</a>
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link" href="./portfolio.html"
+              <a class="header_menu_li link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link" href="">Contacts</a>
+              <a class="header_menu_li link current" href="" >Contacts</a>
             </li>
           </ul>
         </nav>
@@ -68,6 +68,9 @@
           <h2 class="main_info_title visually-hidden">About us</h2>
           <ul class="main_info_li list">
             <li class="main_info_item">
+              <svg class="about_icons">
+                <use href="./images/icons.svg#icon-icon_1"></use>
+              </svg>
               <h3 class="main_info_subtitle">Strategy</h3>
               <p class="main_info_text">
                 Our goal is to identify the business problem to walk away with
