--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="main_title">
         <div class="container">
           <h1 class="main_h">Effective Solutions for Your Business</h1>
-          <button class="button_q" type="button">Order Service</button>
+          <button class="button_q" data-modal-open type="button">Order Service</button>
         </div>
       </section>
       <section class="main_info">
