--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
           <h2 class="main_info_title visually-hidden">About us</h2>
           <ul class="main_info_li list">
             <li class="main_info_item">
-              <svg class="about_icons">
+              <div class="icon-box">
+              <svg class="about_icons" width="64" height="64">
                 <use href="./images/icons.svg#icon-icon_1"></use>
               </svg>
+            </div>
               <h3 class="main_info_subtitle">Strategy</h3>
               <p class="main_info_text">
                 Our goal is to identify the business problem to walk away with
@@ -118,7 +120,7 @@
         </div>
       </section>
       <section class="main_team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="main_team_title">Our Team</h2>
           <ul class="main_team_li list">
             <li class="main_team_item">
@@ -126,6 +128,13 @@
               <div class="team_text">
                 <h3 class="main_team_item_title">Mark Guerrero</h3>
                 <p class="main_team_item_text">Product Designer</p>
+                <li>
+                  <a href="">
+                    <svg>
+                      <use></use>
+                    </svg>
+                  </a>
+                </li>
               </div>
             </li>
             <li class="main_team_item">
