--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           >
           <ul class="header_li list">
             <li class="header_menu_item">
-              <a href="./index.html" class="header_menu_li link current">Studio</a>
+              <a href="./index.html" class="header_menu_li link current"
+                >Studio</a
+              >
             </li>
             <li class="header_menu_item">
               <a class="header_menu_li link current" href="./portfolio.html"
@@ -36,7 +38,7 @@
               >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link current" href="" >Contacts</a>
+              <a class="header_menu_li link current" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -60,7 +62,9 @@
       <section class="main_title">
         <div class="container">
           <h1 class="main_h">Effective Solutions for Your Business</h1>
-          <button class="button_q" data-modal-open type="button">Order Service</button>
+          <button class="button_q" data-modal-open type="button">
+            Order Service
+          </button>
         </div>
       </section>
       <section class="main_info">
@@ -69,10 +73,10 @@
           <ul class="main_info_li list">
             <li class="main_info_item">
               <div class="icon-box">
-              <svg class="about_icons" width="64" height="64">
-                <use href="./images/icons.svg#icon-icon_1"></use>
-              </svg>
-            </div>
+                <svg class="about_icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-icon_1"></use>
+                </svg>
+              </div>
               <h3 class="main_info_subtitle">Strategy</h3>
               <p class="main_info_text">
                 Our goal is to identify the business problem to walk away with
