--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
               </p>
             </li>
             <li class="main_info_item">
+              <div class="icon-box">
+                <svg class="about_icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-icon_2"></use>
+                </svg>
+              </div>
               <h3 class="main_info_subtitle">Punctuality</h3>
               <p class="main_info_text">
                 Bring the key message to the brand's audience for the best price
@@ -91,6 +96,11 @@
               </p>
             </li>
             <li class="main_info_item">
+              <div class="icon-box">
+                <svg class="about_icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-icon_3"></use>
+                </svg>
+              </div>
               <h3 class="main_info_subtitle">Diligence</h3>
               <p class="main_info_text">
                 Research and confirm brands that present the strongest digital
@@ -98,6 +108,11 @@
               </p>
             </li>
             <li class="main_info_item">
+              <div class="icon-box">
+                <svg class="about_icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-icon_4"></use>
+                </svg>
+              </div>
               <h3 class="main_info_subtitle">Technologies</h3>
               <p class="main_info_text">
                 Design practice focused on digital experiences. We bring forth a
