--- a/index.html
+++ b/index.html
@@ -146,14 +146,16 @@
               <img src="./images/img_1.jpg" alt="Mark Guerrero" width="264" />
               <div class="team_text">
                 <h3 class="main_team_item_title">Mark Guerrero</h3>
+                <ul class="team_li list">
+                  <li class="media_item">
+                    <a  class="media_link link" href="">
+                      <svg>
+                        <use></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
                 <p class="main_team_item_text">Product Designer</p>
-                <li>
-                  <a href="">
-                    <svg>
-                      <use></use>
-                    </svg>
-                  </a>
-                </li>
               </div>
             </li>
             <li class="main_team_item">
