--- a/index.html
+++ b/index.html
@@ -146,16 +146,40 @@
               <img src="./images/img_1.jpg" alt="Mark Guerrero" width="264" />
               <div class="team_text">
                 <h3 class="main_team_item_title">Mark Guerrero</h3>
+                <p class="main_team_item_text">Product Designer</p>
                 <ul class="team_li list">
                   <li class="media_item">
-                    <a  class="media_link link" href="">
-                      <svg>
-                        <use></use>
+                    <a
+                      class="media_link link"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram_2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.twitter.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.facebook.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.linkedin.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin_1"></use>
                       </svg>
                     </a>
                   </li>
                 </ul>
-                <p class="main_team_item_text">Product Designer</p>
               </div>
             </li>
             <li class="main_team_item">
@@ -163,6 +187,39 @@
               <div class="team_text">
                 <h3 class="main_team_item_title">Tom Ford</h3>
                 <p class="main_team_item_text">Frontend Developer</p>
+                <ul class="team_li list">
+                  <li class="media_item">
+                    <a
+                      class="media_link link"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram_2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.twitter.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.facebook.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.linkedin.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="main_team_item">
@@ -170,6 +227,39 @@
               <div class="team_text">
                 <h3 class="main_team_item_title">Camila Garcia</h3>
                 <p class="main_team_item_text">Marketing</p>
+                <ul class="team_li list">
+                  <li class="media_item">
+                    <a
+                      class="media_link link"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram_2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.twitter.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.facebook.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.linkedin.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="main_team_item">
@@ -177,6 +267,39 @@
               <div class="team_text">
                 <h3 class="main_team_item_title">Daniel Wilson</h3>
                 <p class="main_team_item_text">UI Designer</p>
+                <ul class="team_li list">
+                  <li class="media_item">
+                    <a
+                      class="media_link link"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram_2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.twitter.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.facebook.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="media_item">
+                    <a class="media_link link" href="https://www.linkedin.com/">
+                      <svg class="media_icon_team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin_1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
