--- a/index.html
+++ b/index.html
@@ -305,6 +305,43 @@
           </ul>
         </div>
       </section>
+      <section class="customers">
+        <div class="company container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-icon_5"></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-icon_6"></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-icon_7"></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-icon_8"></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-icon_9"></use></svg></a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href=""
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-icon_10"></use></svg></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer_section">
       <div class="container">
