--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 ><svg class="customers_icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-icon_7"></use></svg></a>
             </li>
-            <li class="customers+item">
+            <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-icon_8"></use></svg></a>
