--- a/index.html
+++ b/index.html
@@ -353,6 +353,42 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div class="social-section">
+        <p class="media-title">Social media</p>
+            <ul class="social-list list">
+                <li class="social-item-footer">
+                    <a class="social-link-footer" href="">
+                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+                    </a>
+                </li>
+                <li class="social-item-footer">
+                    <a class="social-link-footer" href="">
+                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-twit2"></use></svg>
+                    </a>
+                </li>
+                <li class="social-item-footer">
+                    <a class="social-link-footer" href="">
+                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-face2"></use></svg>
+                    </a>
+                </li>
+                <li class="social-item-footer">
+                    <a class="social-link-footer" href="">
+                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-link2"></use></svg>
+                    </a>
+                </li>
+            </ul>       
+        </div>
+    </div>
+   </footer> 
+   <!-- MODAL-WINDOW -->
+   <div class="backdrop is-hidden" data-modal>
+    <div class="modal-window">
+        <button type="button" class="modal-close-btn" data-modal-close>
+            <svg class="close-icon" width="8" height="8"><use href="./images/icons.svg#icon-close"></use>
+        </svg>
+    </button>
+    </div>
+   </div>
     </footer>
     <script src="./js/modal.js"></script>
   </body>
