--- a/index.html
+++ b/index.html
@@ -380,11 +380,10 @@
         </div>
     </div>
    </footer> 
-   <!-- MODAL-WINDOW -->
-   <div class="backdrop is-hidden" data-modal>
-    <div class="modal-window">
-        <button type="button" class="modal-close-btn" data-modal-close>
-            <svg class="close-icon" width="8" height="8"><use href="./images/icons.svg#icon-close"></use>
+   <div class="backdrop is_hidden" data-modal>
+    <div class="modal_window">
+        <button type="button" class="modal_close_btn" data-modal-close>
+            <svg class="close_icon" width="8" height="8"><use href="./images/icons.svg#icon-close"></use>
         </svg>
     </button>
     </div>
