--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </div>
     </div>
    </footer> 
-   <div class="backdrop is_hidden" data-modal>
+   <div class="backdrop is-hidden" data-modal>
     <div class="modal_window">
         <button type="button" class="modal_close_btn" data-modal-close>
             <svg class="close_icon" width="8" height="8"><use href="./images/icons.svg#icon-close"></use>
