--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
     </div>
    </footer> 
    <div class="backdrop is-hidden" data-modal>
-    <div class="modal_window">
-        <button type="button" class="modal_close_btn" data-modal-close>
+    <div class="modal-window">
+        <button type="button" class="modal-close-btn" data-modal-close>
             <svg class="close_icon" width="8" height="8"><use href="./images/icons.svg#icon-close"></use>
         </svg>
     </button>
