--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
       </section>
     </main>
     <footer class="footer_section">
-      <div class="container">
+      <div class="container footer_main">
+        <div class="footer_cont">
         <a href="./index.html" class="footer_logo link"
           >Web<span class="footer_logo_studio">Studio</span></a
         >
@@ -353,32 +354,33 @@
           digital marketing & growth solutions.
         </p>
       </div>
-      <div class="social-section">
-        <p class="media-title">Social media</p>
-            <ul class="social-list list">
-                <li class="social-item-footer">
-                    <a class="social-link-footer" href="">
-                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+      <div class="media_section">
+        <p class="media_title">Social media</p>
+            <ul class="footer_media_list list">
+                <li class="footer_media_item">
+                    <a class="footer_media_link" href="">
+                        <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
                     </a>
                 </li>
-                <li class="social-item-footer">
-                    <a class="social-link-footer" href="">
-                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-twit2"></use></svg>
-                    </a>
-                </li>
-                <li class="social-item-footer">
-                    <a class="social-link-footer" href="">
-                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-face2"></use></svg>
-                    </a>
-                </li>
-                <li class="social-item-footer">
-                    <a class="social-link-footer" href="">
-                        <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-link2"></use></svg>
-                    </a>
-                </li>
+                <li class="footer_media_item">
+                  <a class="footer_media_link" href="">
+                      <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+                  </a>
+              </li>
+              <li class="footer_media_item">
+                <a class="footer_media_link" href="">
+                    <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+                </a>
+            </li>
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                  <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+              </a>
+          </li>
             </ul>       
         </div>
     </div>
+  </div>
    </footer> 
    <div class="backdrop is-hidden" data-modal>
     <div class="modal-window">
@@ -388,7 +390,6 @@
     </button>
     </div>
    </div>
-    </footer>
     <script src="./js/modal.js"></script>
   </body>
 </html>
