--- a/index.html
+++ b/index.html
@@ -346,41 +346,40 @@
     <footer class="footer_section">
       <div class="container footer_main">
         <div class="footer_cont">
-        <a href="./index.html" class="footer_logo link"
+          <a href="./index.html" class="footer_logo link"
           >Web<span class="footer_logo_studio">Studio</span></a
         >
-        <p class="footer_text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="media_section">
-        <p class="media_title">Social media</p>
-            <ul class="footer_media_list list">
-                <li class="footer_media_item">
-                    <a class="footer_media_link" href="">
-                        <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
-                    </a>
-                </li>
-                <li class="footer_media_item">
+          <p class="footer_text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="media_section">
+          <p class="media_title">Social media</p>
+              <ul class="footer_media_list list">
+                  <li class="footer_media_item">
+                      <a class="footer_media_link" href="">
+                          <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-instagram_2"></use></svg>
+                      </a>
+                  </li>
+                  <li class="footer_media_item">
                   <a class="footer_media_link" href="">
-                      <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+                      <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-twitter_1"></use></svg>
                   </a>
               </li>
               <li class="footer_media_item">
                 <a class="footer_media_link" href="">
-                    <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+                    <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-facebook_1"></use></svg>
                 </a>
             </li>
             <li class="footer_media_item">
               <a class="footer_media_link" href="">
-                  <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-insta2"></use></svg>
+                  <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-linkedin_1"></use></svg>
               </a>
           </li>
             </ul>       
         </div>
     </div>
-  </div>
    </footer> 
    <div class="backdrop is-hidden" data-modal>
     <div class="modal-window">
