--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
       <div class="container footer_main">
         <div class="footer_cont">
           <a href="./index.html" class="footer_logo link"
-          >Web<span class="footer_logo_studio">Studio</span></a
-        >
+            >Web<span class="footer_logo_studio">Studio</span></a
+          >
           <p class="footer_text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -356,39 +356,48 @@
         </div>
         <div class="media_section">
           <p class="media_title">Social media</p>
-              <ul class="footer_media_list list">
-                  <li class="footer_media_item">
-                      <a class="footer_media_link" href="">
-                          <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-instagram_2"></use></svg>
-                      </a>
-                  </li>
-                  <li class="footer_media_item">
-                  <a class="footer_media_link" href="">
-                      <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-twitter_1"></use></svg>
-                  </a>
-              </li>
-              <li class="footer_media_item">
-                <a class="footer_media_link" href="">
-                    <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-facebook_1"></use></svg>
-                </a>
+          <ul class="footer_media_list list">
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram_2"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer_media_item">
               <a class="footer_media_link" href="">
-                  <svg class="media_icon_footer" width="24" height="24"><use href="./images/icons.svg#icon-linkedin_1"></use></svg>
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter_1"></use>
+                </svg>
               </a>
-          </li>
-            </ul>       
+            </li>
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook_1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin_1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
-    </div>
-   </footer> 
-   <div class="backdrop is-hidden" data-modal>
-    <div class="modal-window">
+      </div>
+    </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal-window">
         <button type="button" class="modal-close-btn" data-modal-close>
-            <svg class="close_icon" width="8" height="8"><use href="./images/icons.svg#icon-close"></use>
-        </svg>
-    </button>
+          <svg class="close_icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
     </div>
-   </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
