--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,17 @@
           >
           <ul class="header_li list">
             <li class="header_menu_item">
-              <a href="./index.html" class="header_menu_li link">Studio</a>
+              <a href="./index.html" class="header_menu_li link current"
+                >Studio</a
+              >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link" href="./portfolio.html"
+              <a class="header_menu_li link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link" href="">Contacts</a>
+              <a class="header_menu_li link current" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -188,14 +190,49 @@
       </section>
     </main>
     <footer class="footer_section">
-      <div class="container">
-        <a href="./index.html" class="footer_logo link"
-          >Web<span class="footer_logo_studio">Studio</span></a
-        >
-        <p class="footer_text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer_main">
+        <div class="footer_cont">
+          <a href="./index.html" class="footer_logo link"
+            >Web<span class="footer_logo_studio">Studio</span></a
+          >
+          <p class="footer_text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="media_section">
+          <p class="media_title">Social media</p>
+          <ul class="footer_media_list list">
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram_2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter_1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook_1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer_media_item">
+              <a class="footer_media_link" href="">
+                <svg class="media_icon_footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin_1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
