--- a/portfolio.html
+++ b/portfolio.html
@@ -80,11 +80,16 @@
           <ul class="portfolio_im list">
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
+                <div class="portfolio_img-overflow">
                 <img
                   src="./images/portfolio_1.jpg"
                   alt="banking_app"
                   width="360"
                 />
+                <p class="portfolio_text-overflow">14 Stylish and User-Friendly App Design Concepts
+                  · Task Manager App · Calorie Tracker App 
+                  · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">
                     Banking App Interface Concept
