--- a/portfolio.html
+++ b/portfolio.html
@@ -102,11 +102,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img
-                  src="./images/portfolio_2.jpg"
-                  alt="cashless"
-                  width="360"
-                />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_2.jpg"
+                    alt="cashless"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Cashless Payment</h2>
                   <p class="portfolio_img_text">Marketing</p>
@@ -115,11 +122,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img
-                  src="./images/portfolio_3.jpg"
-                  alt="motivation_app"
-                  width="360"
-                />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_3.jpg"
+                    alt="motivation_app"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Meditation App</h2>
                   <p class="portfolio_img_text">App</p>
@@ -128,7 +142,14 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img src="./images/portfolio_4.jpg" alt="taxi" width="360" />
+                <div class="portfolio_img-overflow">
+                  <img src="./images/portfolio_4.jpg" alt="taxi" width="360" />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Taxi Service</h2>
                   <p class="portfolio_img_text">Marketing</p>
@@ -137,11 +158,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img
-                  src="./images/portfolio_5.jpg"
-                  alt="Illustrations"
-                  width="360"
-                />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_5.jpg"
+                    alt="Illustrations"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Screen Illustrations</h2>
                   <p class="portfolio_img_text">Design</p>
@@ -150,7 +178,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img src="./images/portfolio_6.jpg" alt="courses" width="360" />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_6.jpg"
+                    alt="courses"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Online Courses</h2>
                   <p class="portfolio_img_text">Marketing</p>
@@ -159,11 +198,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img
-                  src="./images/portfolio_7.jpg"
-                  alt="insta_stories"
-                  width="360"
-                />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_7.jpg"
+                    alt="insta_stories"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Instagram Stories Concept</h2>
                   <p class="portfolio_img_text">Design</p>
@@ -172,11 +218,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img
-                  src="./images/portfolio_8.jpg"
-                  alt="organic_food"
-                  width="360"
-                />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_8.jpg"
+                    alt="organic_food"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Organic Food</h2>
                   <p class="portfolio_img_text">Web Site</p>
@@ -185,7 +238,18 @@
             </li>
             <li class="portfolio_img_item">
               <a href="" class="portfolio_img link">
-                <img src="./images/portfolio_9.jpg" alt="coffee" width="360" />
+                <div class="portfolio_img-overflow">
+                  <img
+                    src="./images/portfolio_9.jpg"
+                    alt="coffee"
+                    width="360"
+                  />
+                  <p class="portfolio_text-overflow">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio_info">
                   <h2 class="portfolio_img_title">Fresh Coffee</h2>
                   <p class="portfolio_img_text">Web Site</p>
