--- a/index.html
+++ b/index.html
@@ -312,32 +312,38 @@
             <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-icon_5"></use></svg></a>
+                  <use href="./images/icons.svg#icon-icon_5"></use></svg
+              ></a>
             </li>
             <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-icon_6"></use></svg></a>
+                  <use href="./images/icons.svg#icon-icon_6"></use></svg
+              ></a>
             </li>
             <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-icon_7"></use></svg></a>
+                  <use href="./images/icons.svg#icon-icon_7"></use></svg
+              ></a>
             </li>
             <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-icon_8"></use></svg></a>
+                  <use href="./images/icons.svg#icon-icon_8"></use></svg
+              ></a>
             </li>
             <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-icon_9"></use></svg></a>
+                  <use href="./images/icons.svg#icon-icon_9"></use></svg
+              ></a>
             </li>
             <li class="customers_item">
               <a class="customers_link" href=""
                 ><svg class="customers_icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-icon_10"></use></svg></a>
+                  <use href="./images/icons.svg#icon-icon_10"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
