--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
-        <button type="button" class="modal-close-but" data-modal-close>
+        <button type="button" class="modal_close_but" data-modal-close>
           <svg class="close_icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
