--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
               >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link current" href="./portfolio.html"
+              <a class="header_menu_li link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link current" href="">Contacts</a>
+              <a class="header_menu_li link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
