--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           >
           <ul class="header_li list">
             <li class="header_menu_item">
-              <a href="./index.html" class="header_menu_li link current"
+              <a href="./index.html" class="header_menu_li link"
                 >Studio</a
               >
             </li>
@@ -38,7 +38,7 @@
               >
             </li>
             <li class="header_menu_item">
-              <a class="header_menu_li link current" href="">Contacts</a>
+              <a class="header_menu_li link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
